--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="FR">
 <head>
     <meta charset="utf-8">
+    <title>Page</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <p>It works!</p>
